2008-05-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/Makefile.am:
    * src/async-getprop.c: (Remove)
    * src/async-getprop.h: (Remove)
    * src/ccm-property-async.c:
    * src/ccm-property-async.h: Rewrite of async get property.
    
    * plugins/opacity/ccm-opacity.c:
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-debug.h:
    * src/ccm-display.c:
    * src/ccm-display.h:
    * src/ccm-image.c:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap.c:
    * src/ccm-screen.c:
    * src/ccm-tray-menu.c:
    * src/ccm-window.c: Fix some redraw issue.

2008-04-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: (ccm_screen_check_stack_position) force window with type
                        desktop in bottom of stack.
                        (ccm_screen_on_event) Don't check window in expose event.
    * src/ccm-window.c: Add assert when use CCM_WINDOW_GET_CLASS avoid some
                        crash.

2008-04-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Stop send event when a window accept it.

2008-04-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Add broadcast send event.
    * src/async-getprop.c: Fix crash, data must be eaten on each reply.

2008-04-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/shadow/ccm-shadow.c:
    * src/async-getprop.c:
    * src/cairo-compmgr.c:
    * src/ccm-display.c:
    * src/ccm-drawable.c:
    * src/ccm-screen.c:
    * src/ccm-window-glitz.c:
    * src/ccm-window.c:
    * src/ccm-window.h
    * src/ccm.h: Merge with test and debug branches, fix many redraw, perfomance
                 and crash issues and add support for openbox window manager, 
                 start the road for 0.2.0 release :).

2008-04-18  Nicolas Bruguier  <gandalfn@club-internet.fr>
